# visualSearchEngine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  build_index.py  inf.py  pyproject.toml  requirements.txt  train.py
src/data/: dataset.py  triplet_dataset.py
src/models/: loss.py  net.py
visual_search_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
